# dcm-technical-task-kumar

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
api/: serializers.py  tasks.py  urls.py  views.py
api/tests/: test_tasks.py  test_views.py
docker/: Dockerfile.backend  Dockerfile.frontend  frontend.conf
frontend/src/: axios-api.js
frontend/src/components/AddNewTest/: AddNewTest.js
frontend/src/containers/IONOSTestExecutor/: IONOSTestExecutor.js
ionos/: .env.dist  settings.py
sample-tests/: test_error.py  test_success.py
